--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,8 +8,29 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
   </head>
   <body>
+    <header class="container border h-[102px] w-full flex justify-between items-center absolute top-0 left-0 z-10">
+      <div class="flex items-center gap-[22px]">
+        <img src="./assets/images/logo.svg" alt="">
+        <p class="text-[15px] text-white w-[210px] max-[992px]:text-sm max-[576px]:text-[12px] max-[576px]:w-[163px] max-[390px]:w-[106px]">Разрабатываем фирменные стили с 2009 года</p>
+      </div>
+      <div class="flex gap-[23px] items-center">
+        <a href="tel:+84951563911" class="max-[768px]:hidden"><img src="./assets/images/facebook.svg" alt=""></a>
+        <a href="#" class="max-[768px]:hidden"><img src="./assets/images/call.svg" alt=""></a>
+        <a href="#" class="max-[768px]:hidden"><img src="./assets/images/instagram.svg" alt=""></a>
+        <a href="#" class="min-[768px]:hidden max-[768px]:block"><img src="./assets/images/burger.svg" alt=""></a>
+      </div>
+    </header>
 
-    
+    <main>
+      <!-- hero -->
+       <section class="relative w-full h-[945px] bg-[url(/assets/images/hero-display.png)] bg-no-repeat bg-cover bg-center max-[992px]:h-[768px]">
+        <!-- <div class="container border w-full h-20"></div> -->
+       </section>
+    </main>
+
+
+    <!-- up  -->
+    <a href="#" class="block fixed bottom-8 right-8 p-3 rounded-full bg-black text-white shadow-black shadow-[0_1px_7px]">UP</a>
     <!-- js  -->
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
