add section slides

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <header class="absolute top-0 left-0 w-full z-50">
       <nav class="container w-full h-[90px] flex items-center justify-between">
         <div class="flex gap-[22px] items-center">
-          <img src="./assets/images/logo.svg" alt="">
+          <img src="./assets/images/logo.svg" alt="" class="hover:scale-105 duration-200">
           <span class="max-w-[210px] w-full text-[15px] text-white max-[768px]:text-sm max-[576px]:text-[12px] max-[430px]:max-w-[106px]">Разрабатываем фирменные стили с 2009 года</span>
         </div>
         <div class="flex items-center gap-[23px]">
-          <button class="max-[768px]:hidden"><img src="./assets/images/facebook.svg" alt=""></button>
-          <button class="max-[768px]:hidden"><img src="./assets/images/call.svg" alt=""></button>
-          <button class="max-[768px]:hidden"><img src="./assets/images/instagram.svg" alt=""></button>
-          <button class="block min-[768px]:hidden"><img src="./assets/images/burger.svg" alt=""></button>
+          <button class="max-[768px]:hidden hover:scale-105 duration-150"><img src="./assets/images/facebook.svg" alt=""></button>
+          <button class="max-[768px]:hidden hover:scale-105 duration-150"><img src="./assets/images/call.svg" alt=""></button>
+          <button class="max-[768px]:hidden hover:scale-105 duration-150"><img src="./assets/images/instagram.svg" alt=""></button>
+          <button class="block min-[768px]:hidden active::scale-105 duration-150"><img src="./assets/images/burger.svg" alt=""></button>
         </div>
       </nav>
     </header>
@@ -39,8 +39,8 @@
         <div class="container">
           <h2 class="mb-3.5 text-[38px] max-[992px]:text-[34px] max-[576px]:text-[32px]">Что такое фирменный стиль</h2>
           <div class="flex items-center gap-[30px] max-[768px]:flex-col max-[768px]:items-start">
-            <div class="w-[55%] max-[768px]:w-[70%] max-[576px]:w-[100%]">
-              <img src="./assets/images/style-img.png" alt="" class="">
+            <div class="w-[55%] max-[768px]:w-[70%] max-[576px]:w-[100%] overflow-hidden">
+              <img src="./assets/images/style-img.png" alt="" class="hover:scale-105 duration-150">
             </div>
             <div class="w-[45%] max-[768px]:w-[70%] max-[500px]:w-[100%]">
             <p class="w-full text-[16px] max-[576px]:text-[15px] max-[450px]:text-[14px]">Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.
@@ -81,9 +81,42 @@
             </div>
           </div>
         </section>
+        <!-- price  -->
+         <section>
+          <div class="container w-full py-[60px] mt-[40px]">
+            <h2 class="text-[38px] text-end mb-[15px] max-[992px]:text-[34px] max-[768px]:text-start max-[576px]:text-[32px]">Сколько стоит фирменный стиль?</h2>
+            <div class="flex gap-[75px] max-[992px]:gap-[30px] max-[768px]:flex-col-reverse">
+              <div class="w-[40%] max-[768px]:w-[80%] max-[450px]:w-full">
+                <p class="max-[576px]:text-[15px]">Каждая задача по разработке фирменного стиля уникальна для нас — это новый вызов и новые эмоции. Мы принципиально не предлагаем вам стандартизированные пакеты “эконом”, “стандрат”, или “премиум”, мы не штампуем, мы - создаем.
+                  <br><br>
+                  Стоимость разработки фирменного стиля в нашем агентстве начинается от 120 000 руб., финальную планку без брифинга определить невозможно - давайте созвонимся и обсудим ваш проект! 
+                  <br><br>
+                  <div class="bg-[#2B59C3] py-2.5 px-[13px] rounded-[5px]">
+                    <span class="text-white leading-loose max-[576px]:text-[15px]">Каждый клиент нашего агентства получает приятный бонус на финише проекта, о котором мы расскажем ниже ▼</span></p>
+                  </div>
+              </div>
+              <div class="w-[60%] overflow-hidden max-[768px]:w-full">
+                <img src="./assets/images/price-img.png" alt="" class="hover:scale-105 duration-200">
+              </div>
+            </div>
+          </div>
+         </section>
+         <!-- slides  -->
+          <section>
+            <div class="container">
+              <img src="./assets/images/amperia.png" alt="">
+              <div class="flex items-start gap-[100px] mt-[30px] max-[768px]:gap-[50px] max-[500px]:flex-col max-[500px]:gap-[30px]">
+                <div class="max-[576px]:flex-1">
+                  <h3 class="text-[55px] max-[768px]:text-[45px] max-[576px]:text-[35px]">AQ.Lifecare</h3>
+                  <p class="text-[18px] max-[768px]:text-[15px]">Бренд красивых сувениров и<br> подарков для дома</p>
+                </div>
+                <button class="border px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 hover:underline">Смотреть проект</button>
+              </div>
+            </div>
+          </section>
     </main>
     <!-- up  -->
-    <a href="#" class="block fixed bottom-8 right-8 p-3 rounded-full bg-black text-white shadow-black shadow-[0_1px_7px]">UP</a>
+    <a href="#" class="block fixed bottom-8 right-8 p-3 rounded-full bg-black text-white shadow-black shadow-[0_1px_7px] hover:scale-125 duration-200">UP</a>
     <!-- js  -->
     <script src="./js/script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
