--- a/index.html
+++ b/index.html
@@ -40,10 +40,12 @@
         <div class="container">
           <h2 class="mb-3.5 text-[38px] max-[992px]:text-[34px] max-[576px]:text-[32px]">Что такое фирменный стиль</h2>
           <div class="flex items-center gap-[30px] max-[768px]:flex-col max-[768px]:items-start">
-            <div class="w-[55%] max-[768px]:w-[70%] max-[576px]:w-[100%] overflow-hidden">
+            <div class="w-[55%] max-[768px]:w-[70%] max-[576px]:w-[100%] overflow-hidden" data-aos="fade-up"
+            data-aos-duration="150">
               <img src="./assets/images/style-img.png" alt="" class="hover:scale-105 duration-150">
             </div>
-            <div class="w-[45%] max-[768px]:w-[70%] max-[500px]:w-[100%]">
+            <div class="w-[45%] max-[768px]:w-[70%] max-[500px]:w-[100%]" data-aos="fade-up"
+            data-aos-duration="150">
             <p class="w-full text-[16px] max-[576px]:text-[15px] max-[450px]:text-[14px]">Это набор тех уникальных «признаков», по которым клиент отличит вас от других компаний. Фирменный стиль отражает миссию бренда, ценности, является способом его идентификации, формирует определённое восприятие в коммуникации с потребителями.
               <br><br>
               В идеале разработка корпоративного стиля должна происходить одновременно с созданием бизнеса и формированием его фундаментальных идей. Есть и второй вариант: бизнес существует определенное время и ему нужен перезапуск - это называется редизайн или ребрендинг: в мире жёсткой конкуренции важно быть «в тренде», успевать за изменениями в поведениях покупателя и “говорить” с ним на одном языке.</p>
@@ -56,27 +58,32 @@
           <h2 class="w-full text-[45px] max-[576px]:text-[35px]">Название и логотип – важные составляющие фирменного стиля, но на этом всё только начинается. Ниже основные элементы:</h2>
           <div class="mt-[62px]  grid grid-cols-5 max-[800px]:grid-cols-3 gap-y-[90px] max-[576px]:grid-cols-1">
             <!-- box 1 -->
-            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]">
+            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]" data-aos="fade-up"
+            data-aos-duration="150">
               <span class="text-[45px] -translate-y-[35px] max-[800px]:-translate-y-[10px]">1</span>
               <span class="max-w-[84px] w-full text-[16px] max-[576px]:max-w-full">Название компании</span>
             </div>
             <!-- box 2 -->
-            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]">
+            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]" data-aos="fade-up"
+            data-aos-duration="200">
               <span class="text-[45px] -translate-y-[35px] max-[800px]:-translate-y-[10px]">2</span>
               <span class="max-w-[147px] w-full text-[16px] max-[576px]:max-w-[163px]">Логотип – основной графический символ</span>
             </div>
             <!-- box 3 -->
-            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]">
+            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]" data-aos="fade-up"
+            data-aos-duration="250">
               <span class="text-[45px] -translate-y-[35px] max-[800px]:-translate-y-[10px]">3</span>
               <span class="max-w-[122px] w-full text-[16px] max-[576px]:max-w-[163px]">Фирменные цвета всей коммуникации (онлайн и оффлайн)</span>
             </div>
             <!-- box 4 -->
-            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]">
+            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]" data-aos="fade-up"
+            data-aos-duration="300">
               <span class="text-[45px] -translate-y-[35px] max-[800px]:-translate-y-[10px]">4</span>
               <span class="max-w-[60px] w-full text-[16px] max-[576px]:max-w-full">Шрифт</span>
             </div>
             <!-- box 5 -->
-            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]">
+            <div class="flex items-start gap-[7px] max-[576px]:items-center max-[576px]:gap-[68px] max-[400px]:gap-[56px]" data-aos="fade-up"
+            data-aos-duration="350">
               <span class="text-[45px] -translate-y-[35px] max-[800px]:-translate-y-[10px]">5</span>
               <span class="max-w-[180px] w-full text-sm max-[576px]:max-w-[259px]"><span class="text-[16px]">Носители <br>фирменного стиля</span> <br><br>Этот набор варьируется в зависимости от нужд и потребностей компании: визитные карточки, фирменные бланки и прочая деловая документация, упаковка, сувенирная продукция, брендинг автотранспорта.</span>
             </div>
@@ -84,7 +91,8 @@
         </section>
         <!-- price  -->
          <section>
-          <div class="container w-full py-[60px] mt-[40px]">
+          <div class="container w-full py-[60px] mt-[40px]" data-aos="fade-up"
+          data-aos-duration="200">
             <h2 class="text-[38px] text-end mb-[15px] max-[992px]:text-[34px] max-[768px]:text-start max-[576px]:text-[32px]">Сколько стоит фирменный стиль?</h2>
             <div class="flex gap-[75px] max-[992px]:gap-[30px] max-[768px]:flex-col-reverse">
               <div class="w-[40%] max-[768px]:w-[80%] max-[450px]:w-full">
@@ -103,18 +111,66 @@
           </div>
          </section>
          <!-- slides  -->
-          <section>
-            <div class="container">
-              <img src="./assets/images/amperia.png" alt="">
+          <section class="py-10 container text-center">
+            <!-- slide 1 -->
+            <div class="container mt-5 text-start" data-aos="fade-up"
+            data-aos-duration="200">
+              <div class="overflow-hidden">
+                <img src="./assets/images/amperia.png" alt="" class="scale-105 hover:scale-100 duration-200">
+              </div>
               <div class="flex items-start gap-[100px] mt-[30px] max-[768px]:gap-[50px] max-[500px]:flex-col max-[500px]:gap-[30px]">
                 <div class="max-[576px]:flex-1">
-                  <h3 class="text-[55px] max-[768px]:text-[45px] max-[576px]:text-[35px]">AQ.Lifecare</h3>
+                  <h3 class="text-[55px] max-[768px]:text-[45px] max-[576px]:text-[35px]">Amperia</h3>
                   <p class="text-[18px] max-[768px]:text-[15px]">Бренд красивых сувениров и<br> подарков для дома</p>
                 </div>
                 <button class="border px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 hover:underline">Смотреть проект</button>
               </div>
             </div>
+            <!-- slide 2 -->
+            <div class="container mt-[100px] text-start" data-aos="fade-up"
+            data-aos-duration="200">
+              <div class="overflow-hidden">
+                <img src="./assets/images/amperia (1).png" alt="" class="scale-105 hover:scale-100 duration-200">
+              </div>
+              <div class="flex items-start gap-[100px] mt-[30px] max-[768px]:gap-[50px] max-[500px]:flex-col max-[500px]:gap-[30px]">
+                <div class="max-[576px]:flex-1">
+                  <h3 class="text-[55px] max-[768px]:text-[45px] max-[576px]:text-[35px]">AQ.Lifecare</h3>
+                  <p class="text-[18px] max-[768px]:text-[15px]">Инновационная клиника <br> внутривенной медицины</p>
+                </div>
+                <button class="border px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 hover:underline">Смотреть проект</button>
+              </div>
+            </div>
+            <!-- slide 3 -->
+            <div class="container mt-[100px] text-start" data-aos="fade-up"
+            data-aos-duration="200">
+              <div class="overflow-hidden">
+                <img src="./assets/images/amperia (2).png" alt="" class="scale-105 hover:scale-100 duration-200">
+              </div>
+              <div class="flex items-start gap-[100px] mt-[30px] max-[768px]:gap-[50px] max-[500px]:flex-col max-[500px]:gap-[30px]">
+                <div class="max-[576px]:flex-1">
+                  <h3 class="text-[55px] max-[768px]:text-[45px] max-[576px]:text-[35px]">Vilata</h3>
+                  <p class="text-[18px] max-[768px]:text-[15px]">Бренд натуральных и <br> вкусных соусов</p>
+                </div>
+                <button class="border px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 hover:underline">Смотреть проект</button>
+              </div>
+            </div>
+            <!-- slide 4 -->
+            <div class="container mt-[100px] text-start" data-aos="fade-up"
+            data-aos-duration="200">
+              <div class="overflow-hidden">
+                <img src="./assets/images/amperia (3).png" alt="" class="scale-105 hover:scale-100 duration-200">
+              </div>
+              <div class="flex items-start gap-[100px] mt-[30px] max-[768px]:gap-[50px] max-[500px]:flex-col max-[500px]:gap-[30px]">
+                <div class="max-[576px]:flex-1">
+                  <h3 class="text-[55px] max-[768px]:text-[45px] max-[576px]:text-[35px]">Coral Black</h3>
+                  <p class="text-[18px] max-[768px]:text-[15px]">Черная икра в современной  <br>инторпритации</p>
+                </div>
+                <button class="border px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 hover:underline">Смотреть проект</button>
+              </div>
+            </div>
+            <button class="border border-blue-500 bg-blue-500 text-[26px] text-white mt-[60px] px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 max-[768px]:text-[20px]">Показать еще</button>
           </section>
+
     </main>
     <!-- up  -->
     <a href="#" class="block fixed bottom-8 right-8 p-3 rounded-full bg-black text-white shadow-black shadow-[0_1px_7px] hover:scale-125 duration-200">UP</a>
