--- a/index.html
+++ b/index.html
@@ -170,6 +170,22 @@
             </div>
             <button class="border border-blue-500 bg-blue-500 text-[26px] text-white mt-[60px] px-[47px] py-[27px] max-[768px]:py-[17px] max-[576px]:py-[12px] max-[576px]:px-[40px] rounded-[40px] hover:scale-105 duration-200 max-[768px]:text-[20px]">Показать еще</button>
           </section>
+          <!-- suprise  -->
+           <section class=" container mt-[50px] py-[50px] ">
+             <h2 class="text-[38px] mb-[15px] max-[992px]:text-[34px] max-[768px]:text-start max-[576px]:text-[32px]">Сколько стоит фирменный стиль?</h2>
+             <div class="container flex gap-5 max-[768px]:flex-col">
+                <div class="w-[60%] max-[768px]:w-full">
+                  <img src="./assets/images/price-img.png" alt="">
+                </div>
+              <div class="w-[40%] max-[786px]:w-[80%] max-[576px]:w-full">
+                <div class="bg-[#2B59C3] py-2.5 px-3 rounded-[5px]">
+                <h3 class="text-white text-[26px] max-[992px]:text-[22px] max-[576px]:text-[20px]">Что такое гайдлайн и зачем он нужен?</h3>
+                <p class="text-white mt-5 max-[992px]:mt-2.5 max-[576px]:text-sm max-[576px]:mt-2">А теперь об обещанном бонусе: заказывая фирменный стиль в нашем агентстве вы получаете минимальный гайдлайн в подарок, это позволит вам уже быть на шаг впереди ваших конкурентов!</p>
+              </div>
+                <p class="text-sm mt-1">Гайдлайн – это свод правил по воспроизведению фирменного стиля на носителях. Если коротко, то в гайдлайне описано, как должен выглядеть каждый элемент корпоративного стиля  и какие правила его использования. Гайдлайн помогает вашему бизнесу экономить время и деньги, помогать масштабироваться, а также тиражировать ваш бизнес посредством франшизы.</p>
+              </div>
+              </div>
+           </section>
 
     </main>
     <!-- up  -->
