add section call

--- a/index.html
+++ b/index.html
@@ -173,12 +173,13 @@
           <!-- suprise  -->
            <section class=" container mt-[50px] py-[50px] ">
              <h2 class="text-[38px] mb-[15px] max-[992px]:text-[34px] max-[768px]:text-start max-[576px]:text-[32px]">Сколько стоит фирменный стиль?</h2>
-             <div class="container flex gap-5 max-[768px]:flex-col">
-                <div class="w-[60%] max-[768px]:w-full">
-                  <img src="./assets/images/price-img.png" alt="">
+             <div class="container flex gap-5 max-[768px]:flex-col" data-aos="fade-up"
+             data-aos-duration="200">
+                <div class="w-[60%] max-[768px]:w-full overflow-hidden">
+                  <img src="./assets/images/price-img.png" alt="" class="hover:scale-105 duration-200">
                 </div>
               <div class="w-[40%] max-[786px]:w-[80%] max-[576px]:w-full">
-                <div class="bg-[#2B59C3] py-2.5 px-3 rounded-[5px]">
+                <div class="bg-[#2B59C3] p-2 rounded-[5px]">
                 <h3 class="text-white text-[26px] max-[992px]:text-[22px] max-[576px]:text-[20px]">Что такое гайдлайн и зачем он нужен?</h3>
                 <p class="text-white mt-5 max-[992px]:mt-2.5 max-[576px]:text-sm max-[576px]:mt-2">А теперь об обещанном бонусе: заказывая фирменный стиль в нашем агентстве вы получаете минимальный гайдлайн в подарок, это позволит вам уже быть на шаг впереди ваших конкурентов!</p>
               </div>
@@ -186,7 +187,19 @@
               </div>
               </div>
            </section>
-
+           <!-- call  -->
+            <section class="mt-[50px] py-[50px]">
+              <div class="container">
+             <h2 class="text-[38px] max-[992px]:text-[34px] max-[576px]:text-[32px]">Сколько стоит фирменный стиль?</h2>
+             <p class="text-[22px] max-[992px]:text-[20px] max-[576px]:text-[18px]">Наши эксперты свяжутся с вами в ближайшее время</p>
+             <div class="flex mt-5 gap-[30px] max-[576px]:flex-col">
+              <input type="text" placeholder="Ваше Имя" class="max-w-[350px] w-full h-[70px] border-1 rounded-[10px] indent-[29px]">
+              <input type="text" placeholder="+7 (999) 999-99-99" class="max-w-[350px] w-full h-[70px] border-1 rounded-[10px] indent-[29px]">
+            </div>
+            <div class="mt-3 flex items-center gap-2"><input type="checkbox"><span class="text-[18px] max-[768px]:text-sm">Я принимаю условия передачи персональных данных</span></div>
+            <button class="text-[18px] text-white bg-[#2B59C3] px-[47px] py-[23px] mt-8 rounded-[40px] max-[992px]:text-[16px] max-[768px]:text-sm max=[768px]:px-[40px] max=[768px]:py-[14px]">Оставить заявку</button>
+              </div>
+            </section>
     </main>
     <!-- up  -->
     <a href="#" class="block fixed bottom-8 right-8 p-3 rounded-full bg-black text-white shadow-black shadow-[0_1px_7px] hover:scale-125 duration-200">UP</a>
