--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
               </div>
             </section>
     </main>
-    <!-- up  -->
+    <!-- scrool button  -->
     <a href="#" class="block fixed bottom-8 right-8 p-3 rounded-full bg-black text-white shadow-black shadow-[0_1px_7px] hover:scale-125 duration-200">UP</a>
     <!-- js  -->
     <script src="./js/script.js"></script>
